add enums and stuff
